--- a/views/about.pug
+++ b/views/about.pug
@@ -8,40 +8,56 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Scott Davies
 
         //- Feel free personalize the title below
         p.lead.text-light
-          | Full Stack JavaScript Developer.
-
+          | Full Stack JavaScript Developer
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | Hello and welcome to my page. 
+            br
+            br
+            | A little about me, i'm a current Open University undergraduate in Maths and Technology (Part time - distance learning) and Team Treehouse Tech-Degree student.
+            br
+            br
+            | I'm currently pitching for my first main stream development role and hope the above gives a great example of the skills and discipline required to succeed.
+            | I proudly view myself as a lifelong learner and have progressed through my studies while working full time and supporting a young family (alongside my wife who is an engineer in aerospace).
+            br
+            br
+            | Please enjoy my projects and I hope you can see my potential.
+            br
+            | I look forward to hearing from you. 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
+          li JavaScript
+          li HTML
+          li CSS
+          li JSON
+          li AJAX
+          li Git
+          li DOM Manipulation
+          li Regex
+          li Fetch API
+          li Node JS
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li PUG
+          li Java OOP
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 07474337652
+          li scott@scottdavies.uk
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/scott-davies-8b5170155/') LinkedIn
+        a.button.expanded(href='https://github.com/WebDevBrum') GitHub
+        a.button.expanded(href='https://twitter.com/WebDevBrum') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
