--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,18 +14,20 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/static/images/profile-pic.jpeg')
           .cell.auto
 
             //- Add your name here.
-            h5 Name
+            h5 Scott Davies
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | Description
+              | Hi! I'm a Web Developer based in Birmingham U.K. Currently open to new ventures.
+              br
+              | email: scott@scottdavies.uk
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
@@ -33,7 +35,7 @@ html(class="no-js" lang="en" dir="ltr")
           button.menu-icon(type='button', data-toggle='my-info')
 
           //- Add your name here.  This is for the mobile screen sized version.
-          span.title-bar-title Name
+          span.title-bar-title Scott Davies
       block content
         
 
