--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,15 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 Heading
+      h1 Can we help each other?
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
       p.lead.text-light
-        | Portfolio Description
+        | Hi! and welcome to my portfolio, I hope it gives you an example of how i'm currently developing my skill-set.
+        br 
+        | I look forward to enhancing these base skills with you in my next role.
+        br
+        i this site was bulit using express.js routing and PUG templates.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
@@ -19,9 +23,9 @@ block content
       //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
       
       //- Here's what the Pug for each project example should look like. 
-
-      .cell
-        a(href='#')
-          img.thumbnail(src='https://placehold.it/550x550')
-          h5 Title
+      each project in projects
+        .cell
+          a(href=`/project/${project.id}`)
+            img.thumbnail(src=`static${project.image_urls[0]}`)
+            h5= project.project_name
       
