--- a/views/about.pug
+++ b/views/about.pug
@@ -2,20 +2,24 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/').back ← Projects
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Scott Davies
+        
+        h1.myname Scott Davies
+            br
+            img.profile.thumbnail(src='/static/images/profile-pic.jpeg')
 
         //- Feel free personalize the title below
         p.lead.text-light
           | Full Stack JavaScript Developer
         //- Replace the boilerplate below with your Elevator pitch below.
+        
         .portfolio-bio
-          p
+          p 
             | Hello and welcome to my page. 
             br
             br
@@ -59,5 +63,5 @@ block content
         a.button.expanded(href='https://github.com/WebDevBrum') GitHub
         a.button.expanded(href='https://twitter.com/WebDevBrum') Twitter
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/').back ← Projects
   
