--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,8 @@ block content
         | I look forward to enhancing these base skills with you in my next role.
         br
         i this site was bulit using express.js routing and PUG templates.
+        br
+        a(href='/about').learnb Click here to learn more about me →
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
