--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
     div
 
       
-      h1 Can we help each other?
+      h1 Let's work together?
 
       
       p.lead.text-light
@@ -13,7 +13,7 @@ block content
         br 
         | I look forward to enhancing these base skills with you in my next role.
         br
-        i this site was bulit using express.js routing and PUG templates.
+        i this site was built using express.js routing and PUG templates.
         br
         a(href='/about').learnb Click here to learn more about me →
   article.grid-container.portfolio-index
