new project added and some edits to photos and text

--- a/views/about.pug
+++ b/views/about.pug
@@ -41,15 +41,18 @@ block content
           li JavaScript
           li HTML
           li CSS
+          li React.js
+          li JSX
           li JSON
           li AJAX
           li Git
-          li DOM Manipulation
           li Regex
           li Fetch API
-          li Node JS
+          li Node.js
           li Express
+          li React Router 4
           li PUG
+          li Axios
           li Java OOP
         h6 Contact Info
 
