new projects added

--- a/views/about.pug
+++ b/views/about.pug
@@ -50,6 +50,9 @@ block content
           li Fetch API
           li Node.js
           li Express
+          li SQL ORM Sequelize
+          li SQL
+          li SQLite
           li React Router 4
           li PUG
           li Axios
