--- a/views/about.pug
+++ b/views/about.pug
@@ -23,7 +23,7 @@ block content
             | Hello and welcome to my page. 
             br
             br
-            | A little about me, i'm a current Open University undergraduate in Maths and Technology (Part time - distance learning) and Team Treehouse Tech-Degree student.
+            | A little about me, i'm a current Open University student in Maths and Software engineering (Part time - distance learning) and Team Treehouse Full stack JavaScript Tech Degree graduate. 
             br
             br
             | I'm currently pitching for my first main stream development role and hope the above gives a great example of the skills and discipline required to succeed.
@@ -54,6 +54,8 @@ block content
           li SQL
           li SQLite
           li React Router 4
+          li React
+          li Rest API's
           li PUG
           li Axios
           li Java OOP
