image css update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,9 +64,9 @@ a:hover {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 1rem;
-  border: solid 4px #fefefe;
-  border-radius: 0;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  border: solid 0.5px black; 
+  border-radius: 5px;
+  box-shadow:  5px 10px rgba(10, 10, 10, 0.2);
   line-height: 0;
 }
 
