update thumbnail css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,11 +214,16 @@ img.profile.thumbnail {
   height: 120px;
   width: 100px;
   display: inline-block;
-  border: none;
-  box-shadow: none;
   border: solid 0.5px black; 
   border-radius: 5px;
   box-shadow:  5px 5px rgba(10, 10, 10, 0.2);
+}
+
+img.thumbnail {
+ border: solid 0.5px black; 
+  border-radius: 5px;
+  box-shadow:  5px 5px rgba(10, 10, 10, 0.2);
+
 }
 
 div.inline {
