--- a/views/index.pug
+++ b/views/index.pug
@@ -5,15 +5,15 @@ block content
     div
 
       
-      h1 Let's work together?
+      h1 Hello and Welcome!
 
       
       p.lead.text-light
-        | Hi! and welcome to my portfolio, I hope it gives you an example of how i'm currently developing my skill-set.
+        | Welcome to my portfolio, I hope it gives you an example of how i'm currently developing my skill-set.
         br 
-        | I look forward to enhancing these base skills with you in my next role.
+        | I look forward to enhancing these skills in my next role.
         br
-        i this site was built using express.js routing and PUG templates.
+        i this site was built using express.js and PUG templating.
         br
         a(href='/about').learnb Click here to learn more about me →
   article.grid-container.portfolio-index
