update skills list

--- a/views/about.pug
+++ b/views/about.pug
@@ -41,24 +41,16 @@ block content
           li JavaScript
           li HTML
           li CSS
-          li React.js
-          li JSX
-          li JSON
-          li AJAX
+          li ReactJS
           li Git
-          li Regex
-          li Fetch API
           li Node.js
           li Express
-          li SQL ORM Sequelize
+          li MongoDB
           li SQL
-          li SQLite
-          li React Router 4
-          li React
-          li Rest API's
           li PUG
-          li Axios
           li Java OOP
+          li Python Pandas 
+          li Jupyter Notebooks
         h6 Contact Info
 
         //- Add your own contact info
