--- a/views/about.pug
+++ b/views/about.pug
@@ -43,7 +43,7 @@ block content
           li CSS
           li ReactJS
           li Git
-          li Node.js
+          li NodeJS
           li Express
           li MongoDB
           li SQL
