--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
     div
 
       
-      h1 Hello and Welcome!
+      h1 Hello!
 
       
       p.lead.text-light
@@ -13,7 +13,7 @@ block content
         br 
         | I look forward to enhancing these skills in my next role.
         br
-        a(href='/about').learnb Click here to learn more about me →
+        a(href='/about').learnb Click here to learn more →
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
