--- a/views/about.pug
+++ b/views/about.pug
@@ -7,32 +7,36 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        
-        
-        h1.myname Scott Davies
-            br
-            img.profile.thumbnail(src='/static/images/profile-pic.jpeg')
+
+        img.profile.thumbnail(src='/static/images/profile-pic.jpeg')
 
         
         p.lead.text-light
-          | Full Stack JavaScript Developer
+          | Software Developer specialising in JavaScript and React
         
         
         .portfolio-bio
           p 
-            | Hello and welcome to my page. 
+            | Im currently working as as front-end developer on Monitor calibration software using React to build a desktop application with Electron. 
             br
             br
-            | A little about me, i'm a current Open University student in Maths and Software engineering (Part time - distance learning) and Team Treehouse Full stack JavaScript Tech Degree graduate. 
+            |The app interacts with external hardware devices via an extensive NodeJS back-end to create Windows/Mac colour management profiles. 
+            |This contributes to photography workflows by ensuring a monitor is accurately reproducing color. UI elements are built using Chakra UI with routing handled by React Router.
             br
             br
-            | I'm currently pitching for my first main stream development role and hope the above gives a great example of the skills and discipline required to succeed.
-            | I proudly view myself as a lifelong learner and have progressed through my studies while working full time and supporting a young family (alongside my wife who is an engineer in aerospace).
+            | A little about me, I recently completed a BSc in Software Engineering and Mathematics (1st Class) with the Open university.
+            br
+            br
+            |In tandem with this I have also completed the Team Treehouse Full stack JavaScript Tech Degree/bootcamp  to enhance my experience in web technologies.
+            br
+            br
+            | I proudly view myself as a lifelong learner and have progressed through my studies while working full time and supporting a young family.
             br
             br
             | Please enjoy my projects and I hope you can see my potential.
             br
             | I look forward to hearing from you. 
+
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
@@ -45,9 +49,6 @@ block content
           li Git
           li NodeJS
           li Express
-          li MongoDB
-          li SQL
-          li PUG
           li Java OOP
           li Python Pandas 
           li Jupyter Notebooks
