--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,15 +14,19 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.logo.thumbnail(src='/static/images/white_logo_transparent_background.png')
+            img.logo.brand(src='/static/images/NEWLOGO.jpeg')
+            img.logo.me(src='/static/images/profilepic.JPG')
           .cell.auto
 
             
-            h5 Welcome!
+            //- h5 Welcome!
 
             
             p.text-light
-              | Hi! I'm a Web Developer based in Birmingham U.K. Currently open to new ventures.
+              | Software Developer based in Birmingham U.K. 
+              br
+              br
+              | Currently open to new ventures.
               br
               | email: scott@scottdavies.uk
 
@@ -33,13 +37,13 @@ html(class="no-js" lang="en" dir="ltr")
       .title-bar.hide-for-large
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
-
+        
           
           span.title-bar-title Scott Davies
       
       block content
       div.logoWrap
-        img.logomain.thumbnail(src='/static/images/dark_logo_transparent_background.png')
+        img.logomain.thumbnail(src='/static/images/NEWLOGO.jpeg')
         
 
       
