--- a/views/index.pug
+++ b/views/index.pug
@@ -5,15 +5,14 @@ block content
     div
 
       
-      h1 Hello!
+      //- h1 Hello!
 
       
       p.lead.text-light
-        | Welcome to my portfolio, I hope it gives you an example of how i'm currently developing my skill-set.
+        | Welcome to my page, I hope it gives you an example of how i'm currently developing my skill-set.
         br 
-        | I look forward to enhancing these skills in my next role.
         br
-        a(href='/about').learnb Click here to learn more →
+        a(href='/about').learnb Click here to learn more about my commercial experience →
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
